--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-11 04:12+0200\n"
+"PO-Revision-Date: 2011-08-11 04:17+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -5292,7 +5292,7 @@ msgstr "水平"
 
 #: libraries/display_tbl.lib.php:433
 msgid "horizontal (rotated headers)"
-msgstr "水平 (旋转标题)"
+msgstr "水平 (旋转表头)"
 
 #: libraries/display_tbl.lib.php:434
 msgid "vertical"
