--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-11 04:23+0200\n"
+"PO-Revision-Date: 2011-08-11 04:31+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -4254,7 +4254,7 @@ msgstr "config 认证方式的密码"
 #: libraries/config/messages.inc.php:404
 msgid ""
 "Leave blank for no PDF schema support, suggested: [kbd]pma_pdf_pages[/kbd]"
-msgstr "不使用 PDF 大纲功能请留空，默认：[kbd]pma_pdf_pages[/kbd]"
+msgstr "不使用 PDF 大纲功能请留空，推荐: [kbd]pma_pdf_pages[/kbd]"
 
 #: libraries/config/messages.inc.php:405
 msgid "PDF schema: pages table"
