Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-11 04:34+0200\n"
+"PO-Revision-Date: 2011-08-11 04:35+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -4359,7 +4359,7 @@ msgstr "PDF 大纲: 数据表并发"
 msgid ""
 "Table to describe the display columns, leave blank for no support; "
 "suggested: [kbd]pma_table_info[/kbd]"
-msgstr "描述显示字段的表，不使用请留空，默认：[kbd]pma_table_info[/kbd]"
+msgstr "描述显示字段的表，不使用请留空，推荐: [kbd]pma_table_info[/kbd]"
 
 #: libraries/config/messages.inc.php:426
 msgid "Display columns table"
