--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-11 04:39+0200\n"
+"PO-Revision-Date: 2011-08-11 04:40+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -4112,7 +4112,7 @@ msgstr "书签表"
 msgid ""
 "Leave blank for no column comments/mime types, suggested: [kbd]"
 "pma_column_info[/kbd]"
-msgstr "留空则不使用列信息和MIME类型。默认值：[kbd]pma_column_info[/kbd]"
+msgstr "留空则不使用列信息和MIME类型。推荐: [kbd]pma_column_info[/kbd]"
 
 #: libraries/config/messages.inc.php:375
 msgid "Column information table"
