--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -2727,6 +2727,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Mašyny"
 
