--- a/po/bn.po
+++ b/po/bn.po
@@ -2688,6 +2688,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "ইঞ্জিনসমূহ"
 
