--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2525,6 +2525,7 @@ msgid "Inline edit of this query"
 msgstr "Inline edit of this query"
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Inline"
 
