--- a/po/gl.po
+++ b/po/gl.po
@@ -2745,6 +2745,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Motores"
 
