--- a/po/ms.po
+++ b/po/ms.po
@@ -2630,6 +2630,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
