--- a/po/pl.po
+++ b/po/pl.po
@@ -2653,6 +2653,7 @@ msgstr "Szybka edycja tego zapytania"
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Mechanizmy"
 
