--- a/po/ru.po
+++ b/po/ru.po
@@ -2578,6 +2578,7 @@ msgid "Inline edit of this query"
 msgstr "Быстрое редактирование запроса"
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Быстрая правка"
 
