--- a/po/si.po
+++ b/po/si.po
@@ -2572,6 +2572,7 @@ msgid "Inline edit of this query"
 msgstr "මෙම විමසුමේ පේළිගත සංස්කරණය"
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "පේළිගත"
 
