--- a/po/uz.po
+++ b/po/uz.po
@@ -2748,6 +2748,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Жадвал турлари"
 
