--- a/po/af.po
+++ b/po/af.po
@@ -2619,6 +2619,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
