--- a/po/az.po
+++ b/po/az.po
@@ -2650,6 +2650,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Motorlar"
 
