--- a/po/be.po
+++ b/po/be.po
@@ -2716,6 +2716,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Машыны"
 
