--- a/po/bs.po
+++ b/po/bs.po
@@ -2646,6 +2646,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
