--- a/po/et.po
+++ b/po/et.po
@@ -2691,6 +2691,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Mootor"
 
