--- a/po/eu.po
+++ b/po/eu.po
@@ -2650,6 +2650,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
