--- a/po/fa.po
+++ b/po/fa.po
@@ -2606,6 +2606,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "موتور"
 
