--- a/po/he.po
+++ b/po/he.po
@@ -2649,6 +2649,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "מנועים"
 
