--- a/po/ka.po
+++ b/po/ka.po
@@ -2730,6 +2730,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "ძრავები"
 
