--- a/po/ko.po
+++ b/po/ko.po
@@ -2597,6 +2597,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
