--- a/po/mk.po
+++ b/po/mk.po
@@ -2661,6 +2661,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Складишта"
 
