--- a/po/ml.po
+++ b/po/ml.po
@@ -2451,6 +2451,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
