--- a/po/mn.po
+++ b/po/mn.po
@@ -2675,6 +2675,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Хөдөлгүүрүүд"
 
