--- a/po/pt.po
+++ b/po/pt.po
@@ -2633,6 +2633,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
