--- a/po/ro.po
+++ b/po/ro.po
@@ -2711,6 +2711,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Motoare"
 
