--- a/po/sq.po
+++ b/po/sq.po
@@ -2659,6 +2659,7 @@ msgid "Inline edit of this query"
 msgstr ""
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr ""
 
