--- a/po/sr.po
+++ b/po/sr.po
@@ -2696,6 +2696,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Складиштења"
 
