--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -2690,6 +2690,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Skladištenja"
 
