--- a/po/sv.po
+++ b/po/sv.po
@@ -2541,6 +2541,7 @@ msgid "Inline edit of this query"
 msgstr "Redigera denna fråga"
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Infogad"
 
