--- a/po/tr.po
+++ b/po/tr.po
@@ -2523,6 +2523,7 @@ msgid "Inline edit of this query"
 msgstr "Bu sorguyu sıralı düzenle"
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Sıralı"
 
