--- a/po/tt.po
+++ b/po/tt.po
@@ -2672,6 +2672,7 @@ msgstr ""
 #: libraries/common.lib.php:1216
 #, fuzzy
 #| msgid "Engines"
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "Engine"
 
