--- a/po/ug.po
+++ b/po/ug.po
@@ -2595,6 +2595,7 @@ msgid "Inline edit of this query"
 msgstr "Inline edit of this query"
 
 #: libraries/common.lib.php:1216
+msgctxt "Inline edit query"
 msgid "Inline"
 msgstr "ئىچكى بىرلىشىش"
 
