--- a/po/cs.po
+++ b/po/cs.po
@@ -1492,7 +1492,7 @@ msgstr "Použitá proměnná / vzorec"
 
 #: js/messages.php:196
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 #: js/messages.php:201 libraries/tbl_properties.inc.php:763
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
