--- a/po/cs.po
+++ b/po/cs.po
@@ -4002,10 +4002,9 @@ msgid "Memory limit"
 msgstr "Omezení paměti"
 
 #: libraries/config/messages.inc.php:319
-#, fuzzy
 #| msgid "These are Edit, Inline edit, Copy and Delete links"
 msgid "These are Edit, Copy and Delete links"
-msgstr "Jedná se o odkazy Upravit, Upravit zde, Kopírovat a Odstranit"
+msgstr "Jedná se o odkazy Upravit, Kopírovat a Odstranit"
 
 #: libraries/config/messages.inc.php:320
 msgid "Where to show the table row links"
