--- a/po/cs.po
+++ b/po/cs.po
@@ -5422,10 +5422,9 @@ msgid "Language"
 msgstr "Jazyk"
 
 #: libraries/display_tbl.lib.php:401
-#, fuzzy
 #| msgid "Save directory"
 msgid "Save edited data"
-msgstr "Adresář pro ukládání"
+msgstr "Uložit upravovaná data"
 
 #: libraries/display_tbl.lib.php:407
 msgid "Restore column order"
