--- a/po/cs.po
+++ b/po/cs.po
@@ -8114,10 +8114,9 @@ msgid "No databases"
 msgstr "Žádné databáze"
 
 #: navigation.php:270
-#, fuzzy
 #| msgid "filter tables by name"
 msgid "Filter tables by name"
-msgstr "filtrovat tabulky podle jména"
+msgstr "Filtrovat tabulky podle jména"
 
 #: navigation.php:303 navigation.php:304
 msgctxt "short form"
